Added internal resource reference for VPCs

--- a/vpc-ecscluster-lb-fargate-tutorial/vpc-ecscluster-env/v1/infrastructure/cloudformation.yaml
+++ b/vpc-ecscluster-lb-fargate-tutorial/vpc-ecscluster-env/v1/infrastructure/cloudformation.yaml
@@ -10,9 +10,8 @@ Mappings:
       CIDR: '{{ environment.inputs.subnet_one_cidr}}'
     PublicTwo:
       CIDR: '{{ environment.inputs.subnet_two_cidr}}'
-Parameters:
-  VPCParameter:
-    Type:  AWS::EC2::VPC::Id
+    GENVPC:
+      CIDR: '{{ environment.inputs.gen_vpc_id}}'
 Resources:
   VPC:
     Type: AWS::EC2::VPC
